TokenValidator page frontend

--- a/PasswordManagerBlazor/Client/PasswordManagerBlazor.Client.csproj
+++ b/PasswordManagerBlazor/Client/PasswordManagerBlazor.Client.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\Shared\PasswordManagerBlazor.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\fonts\" />
+  </ItemGroup>
+
 </Project>
