--- a/PasswordManagerBlazor/Server/appsettings.json
+++ b/PasswordManagerBlazor/Server/appsettings.json
@@ -1,9 +1,17 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=MyDatabase.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Jwt": {
+    "Key": "hasloDoDupy",
+    "Issuer": "passwordManager",
+    "Audience": "passwordManager"
+  }
 }
