--- a/PasswordManagerBlazor/Server/PasswordManagerBlazor.Server.csproj
+++ b/PasswordManagerBlazor/Server/PasswordManagerBlazor.Server.csproj
@@ -26,5 +26,9 @@
     <ProjectReference Include="..\Shared\PasswordManagerBlazor.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 
 </Project>
