--- a/PasswordManagerBlazor/Server/appsettings.json
+++ b/PasswordManagerBlazor/Server/appsettings.json
@@ -10,7 +10,7 @@
   },
   "AllowedHosts": "*",
   "Jwt": {
-    "Key": "hasloDoDupy",
+    "Key": "your_super_secret_key_that_is_at_least_32_characters_long",
     "Issuer": "passwordManager",
     "Audience": "passwordManager"
   }
